@@ -6,11 +6,14 @@ import com.naverrain.grocery.core.service.product.CategoryService;
 import com.naverrain.grocery.core.utils.ResourceNotFoundException;
 import com.naverrain.grocery.persistence.entity.product.Category;
 import com.naverrain.grocery.persistence.repository.product.CategoryRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @Transactional
@@ -25,43 +28,84 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public CategoryDto createCategory(CategoryDto categoryDto) {
-        Category category = categoryMapper.toEntity(categoryDto);
-        Category savedCategory = categoryRepository.save(category);
-        return categoryMapper.toDto(savedCategory);
+    @Transactional
+    public CategoryDto create(CategoryDto dto) {
+        if (categoryRepository.existsByNameIgnoreCase(dto.getName())) {
+            throw new IllegalArgumentException("Category already exists");
+        }
+
+        Category category = categoryMapper.toEntity(dto);
+        category.setId(null);
+        category.setVersion(null);
+
+        Category saved = categoryRepository.save(category);
+
+        return categoryMapper.toDto(saved);
     }
 
     @Override
-    public CategoryDto getCategoryById(Long id) {
+    @Transactional(readOnly = true)
+    public CategoryDto getById(Long id) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + id));
         return categoryMapper.toDto(category);
     }
 
     @Override
-    public List<CategoryDto> getAllCategories() {
-        return categoryRepository.findAll()
-                .stream()
+    @Transactional(readOnly = true)
+    public List<CategoryDto> listForHomepage(int maxResults) {
+        int size = Math.max(1, maxResults);
+        return categoryRepository.findAllByOrderByNameAsc(PageRequest.of(0, size)).getContent().stream()
                 .map(categoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public CategoryDto updateCategory(Long id, CategoryDto categoryDto) {
+    @Transactional(readOnly = true)
+    public Page<CategoryDto> getAll(Pageable pageable) {
+        return categoryRepository.findAll(pageable)
+                .map(categoryMapper::toDto);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Page<CategoryDto> searchByName(String name, Pageable pageable) {
+        return categoryRepository.findByNameContainingIgnoreCase(name, pageable)
+                .map(categoryMapper::toDto);
+    }
+
+    @Override
+    public CategoryDto update(Long id, CategoryDto dto) {
         Category category = categoryRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Category not found with ID: " + id));
-        category.setName(categoryDto.getName());
-        category.setDescription(categoryDto.getDescription());
+        if (dto.getVersion() != null && !Objects.equals(dto.getVersion(), category.getVersion())) {
+            throw new IllegalStateException("Category was modified by another operation. Please refresh and try again.");
+        }
+        if (!Objects.equals(category.getName(), dto.getName())
+                && categoryRepository.existsByNameIgnoreCase(dto.getName())) {
+            throw new IllegalArgumentException("Category already exists");
+        }
+        category.setName(dto.getName());
+        category.setDescription(dto.getDescription());
+        category.setImageUrl(dto.getImageUrl());
         Category updatedCategory = categoryRepository.save(category);
         return categoryMapper.toDto(updatedCategory);
     }
 
     @Override
-    public void deleteCategory(Long id) {
+    public void delete(Long id) {
         if (!categoryRepository.existsById(id)) {
             throw new ResourceNotFoundException("Category not found with ID: " + id);
         }
         categoryRepository.deleteById(id);
     }
+
+    @Override
+    public boolean existsByName(String name) {
+        return categoryRepository.existsByNameIgnoreCase(name);
+    }
+
+
+
 }
 
